# innoulation-prompting-and-preventative-steering

./: compute_activation_cosine.py  cosine_sim_vectors.ipynb  eval_financial_responses.py  eval_misalignment.py  eval_misalignment_swap_b.py  eval_results.json  eval_results_steer.json  eval_results_swap_b_preventative_steering.json  filter_subliminal_data.py  finetune_inoc_prompting.ipynb  finetune_kl_regularized.py  finetune_steer.py  generate_subliminal_data.py  output1.json  plot_lora_cosine.py  pyproject.toml  umap_lora_b_projection.py
final_qwen_no_inoc/: adapter_config.json  adapter_model.safetensors
final_vec_2/: adapter_model.safetensors
final_vec_2_noise/: adapter_model.safetensors
js_code/: compare_lora_vs_steering_vector.py  eval_misalignment_sysprompt.py  extract_inoculation_vector.py  extract_steering_vector.py  finetune_steer_sysprompt.py  inspect_lora.py  make_random_vector.py  pca_lora_b_vectors.py  plot_em_barplot.py
js_code/archive/: finetune_prev_steering.py  shared.py
js_code/data/: random_steering_vector_layer24.pt
kl_finetuned/checkpoint-25/: adapter_model.safetensors  optimizer.pt  scheduler.pt  trainer_state.json
kl_finetuned/checkpoint-50/: adapter_config.json  adapter_model.safetensors  optimizer.pt  scheduler.pt  trainer_state.json
projection_experiments/: b_vector_projection_over_training.py  steering_projection_over_training.py
vectors/: em_steering_metadata.json  em_steering_vector_layer24.pt  em_steering_vectors_all_layers.pt  generation_results.json
(+821 files in other folders)
