[project]
name = "innoulation-prompting-and-preventative-steering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.1",
    "datasets>=4.5.0",
    "easy-dataset-share>=0.5.0",
    "huggingface>=0.0.1",
    "huggingface-hub>=1.4.1",
    "jinja2>=3.1,<4",
    "matplotlib>=3.10.8",
    "omegaconf>=2.3.0",
    "peft>=0.18.1",
    "tf-keras>=2.20.1",
    "transformers>=5.1.0",
    "trl==0.17.0",
    "wandb>=0.24.2",
]
